--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -72,12 +72,10 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          pr_number=$(gh pr create --title "Auto-update Nix flake dependencies" \
+          gh pr create --title "Auto-update Nix flake dependencies" \
                        --body "This PR updates the Nix flake dependencies." \
                        --base main \
-                       --head ${{ env.BRANCH_NAME }} \
-                       --json number --jq .number)
-          echo "pr_number=$pr_number" >> $GITHUB_OUTPUT
+                       --head ${{ env.BRANCH_NAME }}
 
       - name: Trigger Hydra build
         if: steps.update-flake.outputs.CHANGED == 'true'
